--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ src="https://www.facebook.com/tr?id=25142429358721915&ev=PageView&noscript=1"
               <span class="line2-highlight text-primary" data-i18n="hero.title.line2.highlight">комфортной жизни</span>
             </span>
           </h1>
-          <span class="hero-consult" data-i18n="hero.consult.free">Бесплатная консультация</span>
+          <a href="#contact" class="hero-consult" data-i18n="hero.consult.free">Бесплатная консультация</a>
         </div>
       </div>
 
@@ -517,7 +517,7 @@ src="https://www.facebook.com/tr?id=25142429358721915&ev=PageView&noscript=1"
         <!-- Main Image (Left) -->
         <div class="order-1 lg:order-1 lg:pt-20">
           <div class="gallery-main-image relative overflow-hidden rounded-2xl group cursor-pointer" data-modal="gallery" data-gallery-index="4">
-            <img src="./media/gallery/5phot.jpg" alt="Factory Floor" class="w-full h-64 lg:h-80 object-cover transition-transform duration-500 group-hover:scale-105">
+            <img src="./media/gallery/5phot.JPG" alt="Factory Floor" class="w-full h-64 lg:h-80 object-cover transition-transform duration-500 group-hover:scale-105">
             <div class="absolute inset-0 bg-gradient-to-t from-black/20 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
           </div>
         </div>
@@ -531,12 +531,12 @@ src="https://www.facebook.com/tr?id=25142429358721915&ev=PageView&noscript=1"
           </div>
           <!-- Top Right -->
           <div class="gallery-side-image relative overflow-hidden rounded-xl group aspect-square cursor-pointer" data-modal="gallery" data-gallery-index="1">
-            <img src="./media/gallery/2phot.JPG" alt="Kitchen" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
+            <img src="./media/gallery/2phot.jpg" alt="Kitchen" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
             <div class="absolute inset-0 bg-gradient-to-t from-black/30 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
           </div>
           <!-- Bottom Left -->
           <div class="gallery-side-image relative overflow-hidden rounded-xl group aspect-square cursor-pointer" data-modal="gallery" data-gallery-index="2">
-            <img src="./media/gallery/3phot.JPG" alt="Construction" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
+            <img src="./media/gallery/3phot.jpg" alt="Construction" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
             <div class="absolute inset-0 bg-gradient-to-t from-black/30 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
           </div>
           <!-- Bottom Right -->
