--- a/index.html
+++ b/index.html
@@ -1658,7 +1658,7 @@ src="https://www.facebook.com/tr?id=25142429358721915&ev=PageView&noscript=1"
           
           <!-- Optional Configurations -->
           <div id="optionalConfigSection" class="mt-8" style="display: none;">
-            <h5 class="text-lg sm:text-xl font-bold text-white mb-4">Optional Configurations (Additional Costs Apply)</h5>
+            <h5 class="text-lg sm:text-xl font-bold text-white mb-4" data-i18n="modal.product.optional.title">Optional Configurations (Additional Costs Apply)</h5>
             <div id="optionalConfigCheckboxes" class="space-y-3">
               <!-- Dynamic checkboxes will be inserted here -->
             </div>
