--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ src="https://www.facebook.com/tr?id=25142429358721915&ev=PageView&noscript=1"
             
         <!-- Product Card 1 - A30 -->
         <div class="catalog-card flex-shrink-0 bg-gray-800 rounded-xl overflow-hidden transition-all">
-          <div class="h-64 bg-cover bg-center bg-gray-700"></div>
+          <div class="h-64 bg-cover bg-center bg-gray-700" style="background-image: url('./media/catalog/A30.jpg')"></div>
           <div class="p-6">
             <div class="flex justify-between items-start mb-3">
               <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2">Capsule House A30</h3>
@@ -365,7 +365,7 @@ src="https://www.facebook.com/tr?id=25142429358721915&ev=PageView&noscript=1"
 
         <!-- Product Card 4 - A50 -->
         <div class="catalog-card flex-shrink-0 bg-gray-800 rounded-xl overflow-hidden transition-all">
-          <div class="h-64 bg-cover bg-center bg-gray-700"></div>
+          <div class="h-64 bg-cover bg-center bg-gray-700" style="background-image: url('./media/catalog/A50.webp')"></div>
           <div class="p-6">
             <div class="flex justify-between items-start mb-3">
               <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2">Capsule House A50</h3>
@@ -381,7 +381,7 @@ src="https://www.facebook.com/tr?id=25142429358721915&ev=PageView&noscript=1"
 
         <!-- Product Card 5 - A70 -->
         <div class="catalog-card flex-shrink-0 bg-gray-800 rounded-xl overflow-hidden transition-all">
-          <div class="h-64 bg-cover bg-center bg-gray-700"></div>
+          <div class="h-64 bg-cover bg-center bg-gray-700" style="background-image: url('./media/catalog/A70.jpg')"></div>
           <div class="p-6">
             <div class="flex justify-between items-start mb-3">
               <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2">Capsule House A70</h3>
@@ -397,7 +397,7 @@ src="https://www.facebook.com/tr?id=25142429358721915&ev=PageView&noscript=1"
 
         <!-- Product Card 6 - D50 -->
         <div class="catalog-card flex-shrink-0 bg-gray-800 rounded-xl overflow-hidden transition-all">
-          <div class="h-64 bg-cover bg-center bg-gray-700"></div>
+          <div class="h-64 bg-cover bg-center bg-gray-700" style="background-image: url('./media/catalog/D50.webp')"></div>
           <div class="p-6">
             <div class="flex justify-between items-start mb-3">
               <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2">Capsule House D50</h3>
@@ -413,7 +413,7 @@ src="https://www.facebook.com/tr?id=25142429358721915&ev=PageView&noscript=1"
 
         <!-- Product Card 7 - L50 -->
         <div class="catalog-card flex-shrink-0 bg-gray-800 rounded-xl overflow-hidden transition-all">
-          <div class="h-64 bg-cover bg-center bg-gray-700"></div>
+          <div class="h-64 bg-cover bg-center bg-gray-700" style="background-image: url('./media/catalog/L50.webp')"></div>
           <div class="p-6">
             <div class="flex justify-between items-start mb-3">
               <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2">Capsule House L50</h3>
@@ -429,7 +429,7 @@ src="https://www.facebook.com/tr?id=25142429358721915&ev=PageView&noscript=1"
 
         <!-- Product Card 8 - L70 -->
         <div class="catalog-card flex-shrink-0 bg-gray-800 rounded-xl overflow-hidden transition-all">
-          <div class="h-64 bg-cover bg-center bg-gray-700"></div>
+          <div class="h-64 bg-cover bg-center bg-gray-700" style="background-image: url('./media/catalog/L70.webp')"></div>
           <div class="p-6">
             <div class="flex justify-between items-start mb-3">
               <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2">Capsule House L70</h3>
@@ -477,7 +477,7 @@ src="https://www.facebook.com/tr?id=25142429358721915&ev=PageView&noscript=1"
 
         <!-- Product Card 12 - G70 -->
         <div class="catalog-card flex-shrink-0 bg-gray-800 rounded-xl overflow-hidden transition-all">
-          <div class="h-64 bg-cover bg-center bg-gray-700"></div>
+          <div class="h-64 bg-cover bg-center bg-gray-700" style="background-image: url('./media/catalog/G70.webp')"></div>
           <div class="p-6">
             <div class="flex justify-between items-start mb-3">
               <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2">Capsule House G70</h3>
@@ -493,7 +493,7 @@ src="https://www.facebook.com/tr?id=25142429358721915&ev=PageView&noscript=1"
 
         <!-- Product Card 13 - X50 -->
         <div class="catalog-card flex-shrink-0 bg-gray-800 rounded-xl overflow-hidden transition-all">
-          <div class="h-64 bg-cover bg-center bg-gray-700"></div>
+          <div class="h-64 bg-cover bg-center bg-gray-700" style="background-image: url('./media/catalog/X50.webp')"></div>
           <div class="p-6">
             <div class="flex justify-between items-start mb-3">
               <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2">Capsule House X50</h3>
@@ -509,7 +509,7 @@ src="https://www.facebook.com/tr?id=25142429358721915&ev=PageView&noscript=1"
 
         <!-- Product Card 14 - X70 -->
         <div class="catalog-card flex-shrink-0 bg-gray-800 rounded-xl overflow-hidden transition-all">
-          <div class="h-64 bg-cover bg-center bg-gray-700"></div>
+          <div class="h-64 bg-cover bg-center bg-gray-700" style="background-image: url('./media/catalog/X70.webp')"></div>
           <div class="p-6">
             <div class="flex justify-between items-start mb-3">
               <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2">Capsule House X70</h3>
@@ -525,7 +525,7 @@ src="https://www.facebook.com/tr?id=25142429358721915&ev=PageView&noscript=1"
 
         <!-- Product Card 15 - U30 -->
         <div class="catalog-card flex-shrink-0 bg-gray-800 rounded-xl overflow-hidden transition-all">
-          <div class="h-64 bg-cover bg-center bg-gray-700"></div>
+          <div class="h-64 bg-cover bg-center bg-gray-700" style="background-image: url('./media/catalog/U30.webp')"></div>
           <div class="p-6">
             <div class="flex justify-between items-start mb-3">
               <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2">Capsule House U30</h3>
@@ -541,7 +541,7 @@ src="https://www.facebook.com/tr?id=25142429358721915&ev=PageView&noscript=1"
 
         <!-- Product Card 16 - U50 -->
         <div class="catalog-card flex-shrink-0 bg-gray-800 rounded-xl overflow-hidden transition-all">
-          <div class="h-64 bg-cover bg-center bg-gray-700"></div>
+          <div class="h-64 bg-cover bg-center bg-gray-700" style="background-image: url('./media/catalog/U50.webp')"></div>
           <div class="p-6">
             <div class="flex justify-between items-start mb-3">
               <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2">Capsule House U50</h3>
@@ -557,7 +557,7 @@ src="https://www.facebook.com/tr?id=25142429358721915&ev=PageView&noscript=1"
 
         <!-- Product Card 17 - W3 -->
         <div class="catalog-card flex-shrink-0 bg-gray-800 rounded-xl overflow-hidden transition-all">
-          <div class="h-64 bg-cover bg-center bg-gray-700"></div>
+          <div class="h-64 bg-cover bg-center bg-gray-700" style="background-image: url('./media/catalog/W3.webp')"></div>
           <div class="p-6">
             <div class="flex justify-between items-start mb-3">
               <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2">Capsule House W3</h3>
@@ -573,7 +573,7 @@ src="https://www.facebook.com/tr?id=25142429358721915&ev=PageView&noscript=1"
 
         <!-- Product Card 18 - W6 -->
         <div class="catalog-card flex-shrink-0 bg-gray-800 rounded-xl overflow-hidden transition-all">
-          <div class="h-64 bg-cover bg-center bg-gray-700"></div>
+          <div class="h-64 bg-cover bg-center bg-gray-700" style="background-image: url('./media/catalog/W6.webp')"></div>
           <div class="p-6">
             <div class="flex justify-between items-start mb-3">
               <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2">Capsule House W6</h3>
@@ -589,7 +589,7 @@ src="https://www.facebook.com/tr?id=25142429358721915&ev=PageView&noscript=1"
 
         <!-- Product Card 19 - W9 -->
         <div class="catalog-card flex-shrink-0 bg-gray-800 rounded-xl overflow-hidden transition-all">
-          <div class="h-64 bg-cover bg-center bg-gray-700"></div>
+          <div class="h-64 bg-cover bg-center bg-gray-700" style="background-image: url('./media/catalog/W9.webp')"></div>
           <div class="p-6">
             <div class="flex justify-between items-start mb-3">
               <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2">Capsule House W9</h3>
@@ -635,6 +635,10 @@ src="https://www.facebook.com/tr?id=25142429358721915&ev=PageView&noscript=1"
       <div class="catalog-indicator" data-index="13"></div>
       <div class="catalog-indicator" data-index="14"></div>
       <div class="catalog-indicator" data-index="15"></div>
+      <div class="catalog-indicator" data-index="16"></div>
+      <div class="catalog-indicator" data-index="17"></div>
+      <div class="catalog-indicator" data-index="18"></div>
+      <div class="catalog-indicator" data-index="19"></div>
     </div>
   </section>
 
