edit indexs and contacts

--- a/index.html
+++ b/index.html
@@ -667,8 +667,6 @@ src="https://www.facebook.com/tr?id=25142429358721915&ev=PageView&noscript=1"
       <div class="catalog-indicator" data-index="13"></div>
       <div class="catalog-indicator" data-index="14"></div>
       <div class="catalog-indicator" data-index="15"></div>
-      <div class="catalog-indicator" data-index="16"></div>
-      <div class="catalog-indicator" data-index="17"></div>
     </div>
   </section>
 
@@ -1299,25 +1297,24 @@ src="https://www.facebook.com/tr?id=25142429358721915&ev=PageView&noscript=1"
               <label class="block text-white font-medium mb-2" data-i18n="contact.form.model">Модель дома</label>
               <select name="houseModel" required class="w-full px-4 py-3 bg-gray-700 border border-gray-600 rounded-lg text-white focus:border-primary focus:outline-none transition-colors">
                 <option value="" data-i18n="contact.form.model.placeholder">Выберите модель</option>
-                <option value="a30">Capsule House A30</option>
-                <option value="a50">Capsule House A50</option>
-                <option value="a70">Capsule House A70</option>
-                <option value="g30">Capsule House G30</option>
-                <option value="g50">Capsule House G50</option>
-                <option value="g50f">Capsule House G50F</option>
-                <option value="g70">Capsule House G70</option>
-                <option value="g70f">Capsule House G70F</option>
-                <option value="l50">Capsule House L50</option>
-                <option value="l50f">Capsule House L50F</option>
-                <option value="l70">Capsule House L70</option>
-                <option value="u30">Capsule House U30</option>
-                <option value="u50">Capsule House U50</option>
-                <option value="x50">Capsule House X50</option>
-                <option value="x70">Capsule House X70</option>
-                <option value="w3">Capsule House W3</option>
-                <option value="w6">Capsule House W6</option>
-                <option value="w9">Capsule House W9</option>
-                <option value="custom">Индивидуальный проект</option>
+                <option value="a30">A30</option>
+                <option value="a50">A50</option>
+                <option value="a70">A70</option>
+                <option value="g30">G30</option>
+                <option value="g50">G50</option>
+                <option value="g50f">G50F</option>
+                <option value="g70">G70</option>
+                <option value="g70f">G70F</option>
+                <option value="l50">L50</option>
+                <option value="l50f">L50F</option>
+                <option value="l70">L70</option>
+                <option value="u30">U30</option>
+                <option value="u50">U50</option>
+                <option value="x50">X50</option>
+                <option value="x70">X70</option>
+                <option value="w3">W3</option>
+                <option value="w6">W6</option>
+                <option value="w9">W9</option>
               </select>
             </div>
 
