--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ src="https://www.facebook.com/tr?id=25142429358721915&ev=PageView&noscript=1"
           <div class="h-64 bg-cover bg-center bg-gray-700" style="background-image: url('./media/catalog/A30.jpg')"></div>
           <div class="p-6">
             <div class="flex justify-between items-start mb-3">
-              <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2">Capsule House A30</h3>
+              <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2" data-i18n="product.a30.title">Capsule House A30</h3>
               <span class="text-primary text-lg sm:text-xl font-bold ml-2 flex-shrink-0">$18,500</span>
             </div>
             <div class="flex items-center justify-center">
@@ -368,7 +368,7 @@ src="https://www.facebook.com/tr?id=25142429358721915&ev=PageView&noscript=1"
           <div class="h-64 bg-cover bg-center bg-gray-700" style="background-image: url('./media/catalog/A50.webp')"></div>
           <div class="p-6">
             <div class="flex justify-between items-start mb-3">
-              <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2">Capsule House A50</h3>
+              <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2" data-i18n="product.a50.title">Capsule House A50</h3>
               <span class="text-primary text-lg sm:text-xl font-bold ml-2 flex-shrink-0">$22,000</span>
             </div>
             <div class="flex items-center justify-center">
@@ -384,7 +384,7 @@ src="https://www.facebook.com/tr?id=25142429358721915&ev=PageView&noscript=1"
           <div class="h-64 bg-cover bg-center bg-gray-700" style="background-image: url('./media/catalog/A70.jpg')"></div>
           <div class="p-6">
             <div class="flex justify-between items-start mb-3">
-              <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2">Capsule House A70</h3>
+              <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2" data-i18n="product.a70.title">Capsule House A70</h3>
               <span class="text-primary text-lg sm:text-xl font-bold ml-2 flex-shrink-0">$24,500</span>
             </div>
             <div class="flex items-center justify-center">
@@ -400,7 +400,7 @@ src="https://www.facebook.com/tr?id=25142429358721915&ev=PageView&noscript=1"
           <div class="h-64 bg-cover bg-center" style="background-image: url('./media/catalog/G30.webp')"></div>
           <div class="p-6">
             <div class="flex justify-between items-start mb-3">
-              <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2">Capsule House G30</h3>
+              <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2" data-i18n="product.g30.title">Capsule House G30</h3>
               <span class="text-primary text-lg sm:text-xl font-bold ml-2 flex-shrink-0">$19,300</span>
             </div>
             <div class="flex items-center justify-center">
@@ -432,7 +432,7 @@ src="https://www.facebook.com/tr?id=25142429358721915&ev=PageView&noscript=1"
           <div class="h-64 bg-cover bg-center bg-gray-700" style="background-image: url('./media/catalog/G50F.webp')"></div>
           <div class="p-6">
             <div class="flex justify-between items-start mb-3">
-              <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2">Capsule House G50F</h3>
+              <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2" data-i18n="product.g50f.title">Capsule House G50F</h3>
               <span class="text-primary text-lg sm:text-xl font-bold ml-2 flex-shrink-0">$21,500</span>
             </div>
             <div class="flex items-center justify-center">
@@ -448,7 +448,7 @@ src="https://www.facebook.com/tr?id=25142429358721915&ev=PageView&noscript=1"
           <div class="h-64 bg-cover bg-center bg-gray-700" style="background-image: url('./media/catalog/G70.jpg')"></div>
           <div class="p-6">
             <div class="flex justify-between items-start mb-3">
-              <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2">Capsule House G70</h3>
+              <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2" data-i18n="product.g70.title">Capsule House G70</h3>
               <span class="text-primary text-lg sm:text-xl font-bold ml-2 flex-shrink-0">$25,500</span>
             </div>
             <div class="flex items-center justify-center">
@@ -464,7 +464,7 @@ src="https://www.facebook.com/tr?id=25142429358721915&ev=PageView&noscript=1"
           <div class="h-64 bg-cover bg-center bg-gray-700" style="background-image: url('./media/catalog/G70F.jpg')"></div>
           <div class="p-6">
             <div class="flex justify-between items-start mb-3">
-              <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2">Capsule House G70F</h3>
+              <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2" data-i18n="product.g70f.title">Capsule House G70F</h3>
               <span class="text-primary text-lg sm:text-xl font-bold ml-2 flex-shrink-0">$25,800</span>
             </div>
             <div class="flex items-center justify-center">
@@ -480,7 +480,7 @@ src="https://www.facebook.com/tr?id=25142429358721915&ev=PageView&noscript=1"
           <div class="h-64 bg-cover bg-center bg-gray-700" style="background-image: url('./media/catalog/L50.jpg')"></div>
           <div class="p-6">
             <div class="flex justify-between items-start mb-3">
-              <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2">Capsule House L50</h3>
+              <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2" data-i18n="product.l50.title">Capsule House L50</h3>
               <span class="text-primary text-lg sm:text-xl font-bold ml-2 flex-shrink-0">$22,500</span>
             </div>
             <div class="flex items-center justify-center">
@@ -496,7 +496,7 @@ src="https://www.facebook.com/tr?id=25142429358721915&ev=PageView&noscript=1"
           <div class="h-64 bg-cover bg-center bg-gray-700" style="background-image: url('./media/catalog/L50F.jpg')"></div>
           <div class="p-6">
             <div class="flex justify-between items-start mb-3">
-              <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2">Capsule House L50F</h3>
+              <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2" data-i18n="product.l50f.title">Capsule House L50F</h3>
               <span class="text-primary text-lg sm:text-xl font-bold ml-2 flex-shrink-0">$23,000</span>
             </div>
             <div class="flex items-center justify-center">
@@ -512,7 +512,7 @@ src="https://www.facebook.com/tr?id=25142429358721915&ev=PageView&noscript=1"
           <div class="h-64 bg-cover bg-center bg-gray-700" style="background-image: url('./media/catalog/L70.jpg')"></div>
           <div class="p-6">
             <div class="flex justify-between items-start mb-3">
-              <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2">Capsule House L70</h3>
+              <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2" data-i18n="product.l70.title">Capsule House L70</h3>
               <span class="text-primary text-lg sm:text-xl font-bold ml-2 flex-shrink-0">$25,000</span>
             </div>
             <div class="flex items-center justify-center">
@@ -528,7 +528,7 @@ src="https://www.facebook.com/tr?id=25142429358721915&ev=PageView&noscript=1"
           <div class="h-64 bg-cover bg-center bg-gray-700" style="background-image: url('./media/catalog/U30.webp')"></div>
           <div class="p-6">
             <div class="flex justify-between items-start mb-3">
-              <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2">Capsule House U30</h3>
+              <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2" data-i18n="product.u30.title">Capsule House U30</h3>
               <span class="text-primary text-lg sm:text-xl font-bold ml-2 flex-shrink-0">$20,500</span>
             </div>
             <div class="flex items-center justify-center">
@@ -544,7 +544,7 @@ src="https://www.facebook.com/tr?id=25142429358721915&ev=PageView&noscript=1"
           <div class="h-64 bg-cover bg-center bg-gray-700" style="background-image: url('./media/catalog/U50.webp')"></div>
           <div class="p-6">
             <div class="flex justify-between items-start mb-3">
-              <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2">Capsule House U50</h3>
+              <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2" data-i18n="product.u50.title">Capsule House U50</h3>
               <span class="text-primary text-lg sm:text-xl font-bold ml-2 flex-shrink-0">$14,500</span>
             </div>
             <div class="flex items-center justify-center">
@@ -560,7 +560,7 @@ src="https://www.facebook.com/tr?id=25142429358721915&ev=PageView&noscript=1"
           <div class="h-64 bg-cover bg-center bg-gray-700" style="background-image: url('./media/catalog/X50.jpg')"></div>
           <div class="p-6">
             <div class="flex justify-between items-start mb-3">
-              <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2">Capsule House X50</h3>
+              <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2" data-i18n="product.x50.title">Capsule House X50</h3>
               <span class="text-primary text-lg sm:text-xl font-bold ml-2 flex-shrink-0">$21,500</span>
             </div>
             <div class="flex items-center justify-center">
@@ -576,7 +576,7 @@ src="https://www.facebook.com/tr?id=25142429358721915&ev=PageView&noscript=1"
           <div class="h-64 bg-cover bg-center bg-gray-700" style="background-image: url('./media/catalog/X70.jpg')"></div>
           <div class="p-6">
             <div class="flex justify-between items-start mb-3">
-              <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2">Capsule House X70</h3>
+              <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2" data-i18n="product.x70.title">Capsule House X70</h3>
               <span class="text-primary text-lg sm:text-xl font-bold ml-2 flex-shrink-0">$24,000</span>
             </div>
             <div class="flex items-center justify-center">
@@ -592,7 +592,7 @@ src="https://www.facebook.com/tr?id=25142429358721915&ev=PageView&noscript=1"
           <div class="h-64 bg-cover bg-center bg-gray-700" style="background-image: url('./media/catalog/W3.webp')"></div>
           <div class="p-6">
             <div class="flex justify-between items-start mb-3">
-              <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2">Capsule House W3</h3>
+              <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2" data-i18n="product.w3.title">Capsule House W3</h3>
               <span class="text-primary text-lg sm:text-xl font-bold ml-2 flex-shrink-0">$19,500</span>
             </div>
             <div class="flex items-center justify-center">
@@ -608,7 +608,7 @@ src="https://www.facebook.com/tr?id=25142429358721915&ev=PageView&noscript=1"
           <div class="h-64 bg-cover bg-center bg-gray-700" style="background-image: url('./media/catalog/W6.png')"></div>
           <div class="p-6">
             <div class="flex justify-between items-start mb-3">
-              <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2">Capsule House W6</h3>
+              <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2" data-i18n="product.w6.title">Capsule House W6</h3>
               <span class="text-primary text-lg sm:text-xl font-bold ml-2 flex-shrink-0">$21,700</span>
             </div>
             <div class="flex items-center justify-center">
@@ -624,7 +624,7 @@ src="https://www.facebook.com/tr?id=25142429358721915&ev=PageView&noscript=1"
           <div class="h-64 bg-cover bg-center bg-gray-700" style="background-image: url('./media/catalog/W9.png')"></div>
           <div class="p-6">
             <div class="flex justify-between items-start mb-3">
-              <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2">Capsule House W9</h3>
+              <h3 class="text-lg sm:text-xl font-bold text-white leading-tight pr-2" data-i18n="product.w9.title">Capsule House W9</h3>
               <span class="text-primary text-lg sm:text-xl font-bold ml-2 flex-shrink-0">$24,300</span>
             </div>
             <div class="flex items-center justify-center">
